--- a/index.html
+++ b/index.html
@@ -4,27 +4,250 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learning how to learn</title>
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
+
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+        <div class="logo logo_place_header z-index"></div>
+        <h2 class="header__title no-margin z-index">Learning How to Learn
+        </h2>
+        <h3 class="header__subtitle no-margin z-index">The most effective, cutting-edge learning techniques that you can apply to your daily life.
+          <a class="header__link" href="#">Learn more &#8594</a>
+        </h3>
+        <img class="header__main-illustration z-index" src="images\header-image.png"
+        alt="man and mountain">
+        <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">The main problem with education
+          </h2>
+          <section class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+            Whether it's at school or university, the one thing no one ever teaches you is how to teach
+            yourself. We often just end up drilling specific exercises and mindlessly memorizing information
+            so that when exam time comes around, we pass the test. But once the test is over, that
+            information has outlived its usefulness, and there's no guarantee that information will be
+            retained. In the end, we're really just learning how to pass our tests.
+            </p>
+            <p class="two-columns__paragraph middle-margin">
+            <span class="two-columns__span-accent">Here's the real question:
+            </span>
+            does this approach of repetition and memorization help us truly
+            understand the subject material? The academic consensus nowadays is that it doesn't. In fact,
+            what's more important than any individual topic is knowing how to study, but for some reason,
+            this point is often overlooked. So, what can we do to remedy this?
+            </p>
+            <p class="two-columns__paragraph">
+            Well, there are various techniques and exercises that can be applied to the educational process
+            to help make it more efficient and engaging. Keep scrolling to uncover some of the secrets of
+            effective learning.
+            </p>
+          </section>
+        </div>
       </section>
-
       <section class="digits">
+        <h1 class="section-title">Facts and figures</h1>
+        <h2 class="section-subtitle">On learning and the brain</h2>
+        <ul class="table table_theme_white">
+          <li class="table__cell">
+            <h3 class="table__heading">86 billion</h3>
+            <p class="table__text">The number of neurons in the human brain
+            </p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">73%</h3>
+            <p class="table__text">The percentage of adults in the US who consider themselves
+            lifelong learners
+            <div class="go_down20">Pew Research Centerе</div>
+            </p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1,000 terabytes</h3>
+            <p class="table__text">The information storage capacity of a human
+            </p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">500 trillion</h3>
+            <p class="table__text">The number of nerve synapses
+            responsible for learning in the
+            average adult human
+            </p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">420 million</h3>
+            <p class="table__text">The number of adults under 25
+            with insufficient education for
+            finding employment
+            <div class="go_down20">World Bank, 2017</div>
+            </p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">26 years old</h3>
+            <p class="table__text">The age at which Albert
+            Einstein published his
+            groundbreaking paper on
+            special relativity</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1885</h3>
+            <p class="table__text">Development of the forgetting curve
+            </p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1897</h3>
+            <p class="table__text">Publication of Ivan Pavlov's research on classical conditioning
+            </p>
+          </li>
+      </ul>
       </section>
-
       <section class="feynman">
+        <h2 class="feynman__title">The Feynman Technique</h2>
+        <h3 class="feynman__subtitle">
+          Learn without forgetting
+        </h3>
+        <a href="#" class="feynman__link">More &#8594</a>
+        <img src="./images/feynman.png"
+        alt="feynman the man"
+        class="feynman__image">
       </section>
-
       <section class="kaufman">
+        <h2 class="section-title_theme_dark">
+          Ten principles of rapid skill acquisition
+        </h2>
+        <h3 class="section-subtitle_theme_dark">
+          by Josh Kaufman
+        </h3>
+        <ul class=" table table_theme_dark">
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
+              1
+            </h4>
+            <p class="table__text table__text_theme_dark">
+              Choose a lovable project
+            </p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
+              2
+            </h4>
+            <p class="table__text table__text_theme_dark">Focus your energy on
+            one skill at a time
+            </p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
+              3
+            </h4>
+            <p class="table__text table__text_theme_dark">
+              Define your target performance level
+            </p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
+              4
+            </h4>
+            <p class="table__text table__text_theme_dark">
+              Deconstruct the skill into sub-skills
+            </p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
+              5
+            </h4>
+            <p class="table__text table__text_theme_dark">
+              Obtain critical tools
+            </p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
+              6
+            </h4>
+            <p class="table__text table__text_theme_dark">
+              Eliminate barriers to practice
+            </p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
+              7
+            </h4>
+            <p class="table__text table__text_theme_dark">
+              Make dedicated time for practice
+            </p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
+              8
+            </h4>
+            <p class="table__text table__text_theme_dark">
+              Create fast feedback loops
+            </p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
+              9
+            </h4>
+            <p class="table__text table__text_theme_dark">
+              Practice by the clock in short bursts
+            </p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
+              10
+            </h4>
+            <p class="table__text table__text_theme_dark">
+              Emphasize quantity and speed
+            </p>
+          </li>
+        </ul>
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <p class="footer__author">&#169 2021 Stas Mnuskin</p>
+        </div>
+        <div class="footer__column_content_about">
+          <h4 class="footer__column-heading">
+            About Practicum by Yandex
+          </h4>
+          <ul class="footer__list go_down20">
+            <li>
+              <a href="#" class="footer__column-link">Home page</a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">Mission</a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">Professions</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__column_content_social">
+          <h4 class="footer__column-heading">Social media</h4>
+          <ul class="footer__list go_down20">
+            <li>
+              <img
+              class="footer__column-social-icons"
+              src="./images/facebook_white.svg"
+              alt="Facebook">
+              <a class="footer__column-link" href="#">facebook</a>
+            </li>
+            <li>
+              <img
+              class="footer__column-social-icons"
+              src="./images/instagram_white.svg"
+              alt="Instagram">
+              <a class="footer__column-link" href="#">instagram</a>
+            </li>
+          </ul>
+      </div>
     </footer>
   </div>
 </body>
