--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <div class="page">
     <header class="header">
         <div class="logo logo_place_header z-index"></div>
-        <h2 class="header__title no-margin z-index">Learning How to Learn
-        </h2>
-        <h3 class="header__subtitle no-margin z-index">The most effective, cutting-edge learning techniques that you can apply to your daily life.
-          <a class="header__link" href="#">Learn more &#8594</a>
-        </h3>
+        <h1 class="header__title no-margin z-index">Learning How to Learn
+        </h1>
+        <p class="header__subtitle no-margin z-index">The most effective, cutting-edge learning techniques that you can apply to your daily life.
+          <a class="header__link" href="#">Learn more &#8594;</a>
+        </p>
         <img class="header__main-illustration z-index" src="images\header-image.png"
         alt="man and mountain">
         <div class="header__square-pic"></div>
@@ -26,7 +26,7 @@
         <div class="two-columns">
           <h2 class="two-columns__brief">The main problem with education
           </h2>
-          <section class="two-columns__main-text">
+          <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
             Whether it's at school or university, the one thing no one ever teaches you is how to teach
             yourself. We often just end up drilling specific exercises and mindlessly memorizing information
@@ -47,59 +47,57 @@
             to help make it more efficient and engaging. Keep scrolling to uncover some of the secrets of
             effective learning.
             </p>
-          </section>
+          </div>
         </div>
       </section>
       <section class="digits">
-        <h1 class="section-title">Facts and figures</h1>
-        <h2 class="section-subtitle">On learning and the brain</h2>
+        <h2 class="section-title">Facts and figures</h2>
+        <h3 class="section-subtitle">On learning and the brain</h3>
         <ul class="table table_theme_white">
           <li class="table__cell">
-            <h3 class="table__heading">86 billion</h3>
+            <h4 class="table__heading">86 billion</h4>
             <p class="table__text">The number of neurons in the human brain
             </p>
           </li>
           <li class="table__cell">
-            <h3 class="table__heading">73%</h3>
+            <h4 class="table__heading">73%</h4>
             <p class="table__text">The percentage of adults in the US who consider themselves
             lifelong learners
-            <div class="go_down20">Pew Research Centerе</div>
-            </p>
+            <p class="table__text">Pew Research Centerе</p>
           </li>
           <li class="table__cell">
-            <h3 class="table__heading">1,000 terabytes</h3>
+            <h4 class="table__heading">1,000 terabytes</h4>
             <p class="table__text">The information storage capacity of a human
             </p>
           </li>
           <li class="table__cell">
-            <h3 class="table__heading">500 trillion</h3>
+            <h4 class="table__heading">500 trillion</h4>
             <p class="table__text">The number of nerve synapses
             responsible for learning in the
             average adult human
             </p>
           </li>
           <li class="table__cell">
-            <h3 class="table__heading">420 million</h3>
+            <h4 class="table__heading">420 million</h4>
             <p class="table__text">The number of adults under 25
             with insufficient education for
             finding employment
-            <div class="go_down20">World Bank, 2017</div>
-            </p>
+            <p class="table__text">World Bank, 2017</p>
           </li>
           <li class="table__cell">
-            <h3 class="table__heading">26 years old</h3>
+            <h4 class="table__heading">26 years old</h4>
             <p class="table__text">The age at which Albert
             Einstein published his
             groundbreaking paper on
             special relativity</p>
           </li>
           <li class="table__cell">
-            <h3 class="table__heading">1885</h3>
+            <h4 class="table__heading">1885</h4>
             <p class="table__text">Development of the forgetting curve
             </p>
           </li>
           <li class="table__cell">
-            <h3 class="table__heading">1897</h3>
+            <h4 class="table__heading">1897</h4>
             <p class="table__text">Publication of Ivan Pavlov's research on classical conditioning
             </p>
           </li>
@@ -110,20 +108,20 @@
         <h3 class="feynman__subtitle">
           Learn without forgetting
         </h3>
-        <a href="#" class="feynman__link">More &#8594</a>
+        <a href="#" class="feynman__link">More &#8594;</a>
         <img src="./images/feynman.png"
         alt="feynman the man"
         class="feynman__image">
       </section>
       <section class="kaufman">
-        <h2 class="section-title_theme_dark">
+        <h2 class="kaufman section-title_theme_dark">
           Ten principles of rapid skill acquisition
         </h2>
-        <h3 class="section-subtitle_theme_dark">
+        <h3 class="kaufman section-subtitle_theme_dark">
           by Josh Kaufman
         </h3>
         <ul class=" table table_theme_dark">
-          <li class="table__cell_theme_dark">
+          <li class="table table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">
               1
             </h4>
@@ -209,15 +207,15 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <p class="footer__author">&#169 2021 Stas Mnuskin</p>
+          <p class="footer__author">&#169; 2021 Stas Mnuskin</p>
         </div>
-        <div class="footer__column_content_about">
+        <div class="footer footer__column_content_about">
           <h4 class="footer__column-heading">
             About Practicum by Yandex
           </h4>
-          <ul class="footer__list go_down20">
+          <ul class="footer__list">
             <li>
               <a href="#" class="footer__column-link">Home page</a>
             </li>
@@ -229,24 +227,18 @@
             </li>
           </ul>
         </div>
-        <div class="footer__column_content_social">
+        <div class="footer footer__column_content_social">
           <h4 class="footer__column-heading">Social media</h4>
-          <ul class="footer__list go_down20">
-            <li>
-              <img
+          <div class="footer__list">
+            <a class="footer__column-link" href="#"><img
               class="footer__column-social-icons"
               src="./images/facebook_white.svg"
-              alt="Facebook">
-              <a class="footer__column-link" href="#">facebook</a>
-            </li>
-            <li>
-              <img
-              class="footer__column-social-icons"
+              alt="Facebook">facebook</a>
+              <a class="footer__column-link" href="#"><img
+              class="footer__social-icons"
               src="./images/instagram_white.svg"
-              alt="Instagram">
-              <a class="footer__column-link" href="#">instagram</a>
-            </li>
-          </ul>
+              alt="Instagram">instagram</a>
+          </div>
         </div>
       </div>
     </footer>
