--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
   <div class="page">
     <header class="header">
-        <div class="logo logo_place_header z-index"></div>
-        <h1 class="header__title no-margin z-index">Learning How to Learn
+        <div class="logo logo_place_header"></div>
+        <h1 class="header__title">Learning How to Learn
         </h1>
-        <p class="header__subtitle no-margin z-index">The most effective, cutting-edge learning techniques that you can apply to your daily life.
+        <p class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life.
           <a class="header__link" href="#">Learn more &#8594;</a>
         </p>
-        <img class="header__main-illustration z-index" src="images\header-image.png"
+        <img class="header__main-illustration" src="./images/header-image.png"
         alt="man and mountain">
         <div class="header__square-pic"></div>
     </header>
@@ -34,7 +34,7 @@
             information has outlived its usefulness, and there's no guarantee that information will be
             retained. In the end, we're really just learning how to pass our tests.
             </p>
-            <p class="two-columns__paragraph middle-margin">
+            <p class="two-columns__paragraph">
             <span class="two-columns__span-accent">Here's the real question:
             </span>
             does this approach of repetition and memorization help us truly
@@ -116,14 +116,14 @@
         class="feynman__image">
       </section>
       <section class="kaufman">
-        <h2 class="kaufman section-title_theme_dark">
+        <h2 class="section-title section-title_theme_dark">
           Ten principles of rapid skill acquisition
         </h2>
-        <h3 class="kaufman section-subtitle_theme_dark">
+        <h3 class="section-title section-title_theme_dark">
           by Josh Kaufman
         </h3>
-        <ul class=" table table_theme_dark">
-          <li class="table table__cell_theme_dark">
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">
               1
             </h4>
@@ -131,7 +131,7 @@
               Choose a lovable project
             </p>
           </li>
-          <li class="table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">
               2
             </h4>
@@ -139,7 +139,7 @@
             one skill at a time
             </p>
           </li>
-          <li class="table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">
               3
             </h4>
@@ -147,7 +147,7 @@
               Define your target performance level
             </p>
           </li>
-          <li class="table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">
               4
             </h4>
@@ -155,7 +155,7 @@
               Deconstruct the skill into sub-skills
             </p>
           </li>
-          <li class="table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">
               5
             </h4>
@@ -163,7 +163,7 @@
               Obtain critical tools
             </p>
           </li>
-          <li class="table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">
               6
             </h4>
@@ -171,7 +171,7 @@
               Eliminate barriers to practice
             </p>
           </li>
-          <li class="table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">
               7
             </h4>
@@ -179,7 +179,7 @@
               Make dedicated time for practice
             </p>
           </li>
-          <li class="table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">
               8
             </h4>
@@ -187,7 +187,7 @@
               Create fast feedback loops
             </p>
           </li>
-          <li class="table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">
               9
             </h4>
@@ -195,7 +195,7 @@
               Practice by the clock in short bursts
             </p>
           </li>
-          <li class="table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">
               10
             </h4>
@@ -209,11 +209,11 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
           <p class="footer__author">&#169; 2021 Stas Mnuskin</p>
         </div>
-        <div class="footer footer__column_content_about">
+        <div class="footer__column footer__column_content_about">
           <h4 class="footer__column-heading">
             About Practicum by Yandex
           </h4>
@@ -229,18 +229,23 @@
             </li>
           </ul>
         </div>
-        <div class="footer footer__column_content_social">
+        <div class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Social media</h4>
-          <div class="footer__list">
-            <a class="footer__column-link" href="#"><img
-              class="footer__column-social-icons"
+          <ul class="footer__list">
+            <li class="facebook">
+              <a class="footer__column-link" href="#">
+              <img
+              class="footer__social-icons"
               src="./images/facebook_white.svg"
               alt="Facebook">facebook</a>
+            </li>
+            <li class="instagram">
               <a class="footer__column-link" href="#"><img
-              class="footer__social-icons"
-              src="./images/instagram_white.svg"
-              alt="Instagram">instagram</a>
-          </div>
+                class="footer__social-icons"
+                src="./images/instagram_white.svg"
+                alt="Instagram">instagram</a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
