--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <h2 class="section-title section-title_theme_dark">
           Ten principles of rapid skill acquisition
         </h2>
-        <h3 class="section-title section-title_theme_dark">
+        <h3 class="section-subtitle section-subtitle_theme_dark">
           by Josh Kaufman
         </h3>
         <ul class="table table_theme_dark">
