--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </p>
         <img class="header__main-illustration" src="./images/header-image.png"
         alt="man and mountain">
-        <div class="header__square-pic"></div>
+        <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -47,6 +47,87 @@
             to help make it more efficient and engaging. Keep scrolling to uncover some of the secrets of
             effective learning.
             </p>
+          </div>
+        </div>
+      </section>
+      <section class="techniques">
+        <h2 class="section-title">
+          Learning Techniques
+        </h2>
+        <h3 class="section-subtitle">
+          Five Strategies from Barbara Oakley
+        </h3>
+        <ul class="cards">
+          <li class="cards__item">
+            <img src="./images/cards-attention.png" alt="book" class="cards__image">
+            <h4 class="cards__title">Two Ways of Thinking</h4>
+            <p class="cards__description">Deep understanding comes from being able to toggle back and forth between focused and diffused thinking.</p>
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards-recall.png" alt="statue" class="cards__image">
+            <h4 class="cards__title">Recall</h4>
+            <p class="cards__description">Improving your ability to remember key bits of information help to connect different part of the brain.
+            </p>
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards-interleaving.png" alt="hall" class="cards__image">
+            <h4 class="cards__title">Interleaving</h4>
+            <p class="cards__description">When you learn multiple skills at the same time, they reinforce each other.
+            </p>
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards-question.png" alt="big room" class="cards__image">
+            <h4 class="cards__title">Questions</h4>
+            <p class="cards__description">When listening to your teacher, think up a good question, something you`re really itching to know.
+            </p>
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards-competence.png" alt="hand shelf" class="cards__image">
+            <h4 class="cards__title">Illusion of Competence</h4>
+            <p class="cards__description">Test yourself, write it down, tell other people, and repeat the process in different settings. Only then can you be truly certain you`ve understood something.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="video">
+        <h2 class="section-title">TED talks</h2>
+        <h3 class="section-subtitle">For lovers of procrastination</h3>
+        <div class="video__iframes">
+          <iframe src="https://www.youtube.com/watch?v=5MgBikgcWnY" frameborder="0" class="video__iframe">Left video</iframe>
+          <iframe src="https://www.youtube.com/watch?v=arj7oStGLkU" frameborder="0" class="video__iframe">Right video</iframe>
+        </div>
+      </section>
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">
+            Barbara Oakley’s story.
+          </h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+              Math didn't come naturally to Barbara in childhood. She thought of herself as more of a
+              humanities person, and not a brilliant one at that. With an eye to becoming a linguist, after
+              school she enlisted in the army, who sent her to learn Russian. After several years of service,
+              during which she rose to the rank of Captain, Barbara left the army and decided to study
+              engineering. In was during this time that she developed her learning methodology as she was
+              forced to reprogram her brain for a different kind of learning. It turns out that when something
+              doesn't come naturally to you, having to work hard to gain the knowledge that other people
+              may get at first glance gives you a deeper, more comprehensive understanding of the subject matter.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="khan">
+        <div class="khan__container">
+          <h2 class="khan__author">Salman Khan</h2>
+          <h3 class="khan__title">The One World Schoolhouse</h3>
+          <p class="khan__quote">
+            Sal Khan's passion and innovation is transforming learning for millions of students worldwide. The One World Schoolhouse is a must-read for all who are committed to improving education so students everywhere can gain the skills and knowledge to be successful in school, careers and life.
+          </p>
+          <h4 class="khan__quote-author">George Lucas</h4>
+          <h5 class="khan__quote-author-subline">Filmmaker</h5>
+          <div class="khan__book-container">
+            <img src="./images/khan-book-2.png" alt="khan book" class="khan__book-pic">
+            <a href="#" class="khan__buy-link">Buy book &#8594;</a>
           </div>
         </div>
       </section>
@@ -204,7 +285,7 @@
             </p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
     </main>
     <footer class="footer">
