--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         <h2 class="section-title">TED talks</h2>
         <h3 class="section-subtitle">For lovers of procrastination</h3>
         <div class="video__iframes">
-          <iframe src="https://www.youtube.com/watch?v=5MgBikgcWnY" frameborder="0" class="video__iframe">Left video</iframe>
-          <iframe src="https://www.youtube.com/watch?v=arj7oStGLkU" frameborder="0" class="video__iframe">Right video</iframe>
+          <iframe src="https://www.youtube.com/watch?v=5MgBikgcWnY" class="video__iframe"></iframe>
+          <iframe src="https://www.youtube.com/watch?v=arj7oStGLkU" class="video__iframe"></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -113,21 +113,6 @@
               doesn't come naturally to you, having to work hard to gain the knowledge that other people
               may get at first glance gives you a deeper, more comprehensive understanding of the subject matter.
             </p>
-          </div>
-        </div>
-      </section>
-      <section class="khan">
-        <div class="khan__container">
-          <h2 class="khan__author">Salman Khan</h2>
-          <h3 class="khan__title">The One World Schoolhouse</h3>
-          <p class="khan__quote">
-            Sal Khan's passion and innovation is transforming learning for millions of students worldwide. The One World Schoolhouse is a must-read for all who are committed to improving education so students everywhere can gain the skills and knowledge to be successful in school, careers and life.
-          </p>
-          <h4 class="khan__quote-author">George Lucas</h4>
-          <h5 class="khan__quote-author-subline">Filmmaker</h5>
-          <div class="khan__book-container">
-            <img src="./images/khan-book-2.png" alt="khan book" class="khan__book-pic">
-            <a href="#" class="khan__buy-link">Buy book &#8594;</a>
           </div>
         </div>
       </section>
@@ -185,6 +170,21 @@
             </p>
           </li>
       </ul>
+      </section>
+      <section class="khan">
+        <div class="khan__container">
+          <h2 class="khan__author">Salman Khan</h2>
+          <h3 class="khan__title">The One World Schoolhouse</h3>
+          <p class="khan__quote">
+            Sal Khan's passion and innovation is transforming learning for millions of students worldwide. The One World Schoolhouse is a must-read for all who are committed to improving education so students everywhere can gain the skills and knowledge to be successful in school, careers and life.
+          </p>
+          <h4 class="khan__quote-author">George Lucas</h4>
+          <h5 class="khan__quote-author-subline">Filmmaker</h5>
+          <div class="khan__book-container">
+            <img src="./images/khan-book-2.png" alt="khan book" class="khan__book-pic">
+            <a href="#" class="khan__buy-link">Buy book &#8594;</a>
+          </div>
+        </div>
       </section>
       <section class="feynman">
         <h2 class="feynman__title">The Feynman Technique</h2>
@@ -286,6 +286,36 @@
           </li>
         </ul>
         <div class="kaufman__triangle rotation"></div>
+      </section>
+      <section class="resources">
+        <h2 class="section-title">Useful resources</h2>
+        <h3 class="section-subtitle">
+          Further materials on learning techniques and hacks.
+        </h3>
+        <ul class="resources__logo-zone">
+          <li class="resources__logo">
+            <a href="https://ed.ted.com/">
+              <img src="./images/logo/resources-tedED.png" alt="ted" class="resources__logo-image">
+            </a>
+          </li>
+          <li class="resources__logo">
+            <a href="https://medium.com/">
+              <img src="./images/logo/resources-Medium.png" alt="medium" class="resources__logo-image">
+            </a>
+          </li>
+          <li class="resources__logo">
+            <a href="https://www.dezeen.com/">
+              <img src="./images/logo/resources-dezeen.png" alt="de zeen" class="resources__logo-image">
+            </a>
+          </li>
+          <li class="resources__logo">
+            <a href="https://www.goodreads.com/">
+              <img src="./images/logo/resources-goodreads.png" alt="good reads" class="resources__logo-image">
+            </a>
+          </li>
+        </ul>
+
+
       </section>
     </main>
     <footer class="footer">
