--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learning how to learn</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./index.css">
 
 </head>
 <body>
@@ -285,7 +284,7 @@
             </p>
           </li>
         </ul>
-        <div class="kaufman__triangle rotation"></div>
+        <img src="/images/kaufman-triangle.svg" class="kaufman__triangle rotation"></img>
       </section>
       <section class="resources">
         <h2 class="section-title">Useful resources</h2>
