--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             </p>
           </li>
         </ul>
-        <img src="/images/kaufman-triangle.svg" class="kaufman__triangle rotation"></img>
+        <img src="/images/kaufman-triangle.svg" class="kaufman__triangle rotation" alt="blue triangle">
       </section>
       <section class="resources">
         <h2 class="section-title">Useful resources</h2>
