--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-        <div class="logo logo_place_header"></div>
+        <img class="logo logo_place_header" src="../web_project_1/images/logo_place_header.png" alt="logo-header">
         <h1 class="header__title">Learning How to Learn
         </h1>
         <p class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life.
@@ -92,8 +92,8 @@
         <h2 class="section-title">TED talks</h2>
         <h3 class="section-subtitle">For lovers of procrastination</h3>
         <div class="video__iframes">
-          <iframe src="https://www.youtube.com/watch?v=5MgBikgcWnY" class="video__iframe"></iframe>
-          <iframe src="https://www.youtube.com/watch?v=arj7oStGLkU" class="video__iframe"></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -284,7 +284,7 @@
             </p>
           </li>
         </ul>
-        <img src="/images/kaufman-triangle.svg" class="kaufman__triangle rotation" alt="blue triangle">
+        <img src="../.././stasm/web_project_1/images/kaufman-triangle.svg" class="kaufman__triangle rotation" alt="blue triangle">
       </section>
       <section class="resources">
         <h2 class="section-title">Useful resources</h2>
@@ -320,7 +320,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <div class="logo logo_place_footer"></div>
+          <img class="logo logo_place_footer" src="../web_project_1/images/logo_place_footer.png" alt="logo-footer">
           <p class="footer__author">&#169; 2021 Stas Mnuskin</p>
         </div>
         <div class="footer__column footer__column_content_about">
