--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-        <img class="logo logo_place_header" src="../web_project_1/images/logo_place_header.png" alt="logo-header">
+        <img class="logo logo_place_header" src="./images/logo_place_header.png" alt="logo-header">
         <h1 class="header__title">Learning How to Learn
         </h1>
         <p class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life.
@@ -285,7 +285,7 @@
             </p>
           </li>
         </ul>
-        <img src="../.././stasm/web_project_1/images/kaufman-triangle.svg" class="kaufman__triangle rotation" alt="blue triangle">
+        <img src="./images/kaufman-triangle.svg" class="kaufman__triangle rotation" alt="blue triangle">
       </section>
       <section class="resources">
         <h2 class="section-title">Useful resources</h2>
@@ -321,7 +321,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img class="logo logo_place_footer" src="../web_project_1/images/logo_place_footer.png" alt="logo-footer">
+          <img class="logo logo_place_footer" src="./images/logo_place_footer.png" alt="logo-footer">
           <p class="footer__author">&#169; 2021 Stas Mnuskin</p>
         </div>
         <div class="footer__column footer__column_content_about">
