--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learning how to learn</title>
-  <link rel="stylesheet" href="./index.css">
-
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
   <div class="page">
@@ -53,36 +52,40 @@
         <h2 class="section-title">
           Learning Techniques
         </h2>
-        <h3 class="section-subtitle">
+        <p class="section-subtitle">
           Five Strategies from Barbara Oakley
-        </h3>
+        </p>
         <ul class="cards">
           <li class="cards__item">
             <img src="./images/cards-attention.png" alt="book" class="cards__image">
-            <h4 class="cards__title">Two Ways of Thinking</h4>
+            <h3 class="cards__title">
+              Two Ways of Thinking
+            </h3>
             <p class="cards__description">Deep understanding comes from being able to toggle back and forth between focused and diffused thinking.</p>
           </li>
           <li class="cards__item">
             <img src="./images/cards-recall.png" alt="statue" class="cards__image">
-            <h4 class="cards__title">Recall</h4>
+            <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Improving your ability to remember key bits of information help to connect different part of the brain.
             </p>
           </li>
           <li class="cards__item">
             <img src="./images/cards-interleaving.png" alt="hall" class="cards__image">
-            <h4 class="cards__title">Interleaving</h4>
+            <h3 class="cards__title">Interleaving</h3>
             <p class="cards__description">When you learn multiple skills at the same time, they reinforce each other.
             </p>
           </li>
           <li class="cards__item">
             <img src="./images/cards-question.png" alt="big room" class="cards__image">
-            <h4 class="cards__title">Questions</h4>
+            <h3 class="cards__title">Questions</h3>
             <p class="cards__description">When listening to your teacher, think up a good question, something you`re really itching to know.
             </p>
           </li>
           <li class="cards__item">
             <img src="./images/cards-competence.png" alt="hand shelf" class="cards__image">
-            <h4 class="cards__title">Illusion of Competence</h4>
+            <h3 class="cards__title">
+              Illusion of Competence
+            </h3>
             <p class="cards__description">Test yourself, write it down, tell other people, and repeat the process in different settings. Only then can you be truly certain you`ve understood something.
             </p>
           </li>
@@ -92,8 +95,8 @@
         <h2 class="section-title">TED talks</h2>
         <h3 class="section-subtitle">For lovers of procrastination</h3>
         <div class="video__iframes">
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -117,9 +120,9 @@
       </section>
       <section class="feynman">
         <h2 class="feynman__title">The Feynman Technique</h2>
-        <h3 class="feynman__subtitle">
+        <p class="feynman__subtitle">
           Learn without forgetting
-        </h3>
+        </p>
         <a href="#" class="feynman__link">More &#8594;</a>
         <img src="./images/feynman.png"
         alt="feynman the man"
@@ -182,13 +185,17 @@
       </section>
       <section class="khan">
         <div class="khan__container">
-          <h2 class="khan__author">Salman Khan</h2>
-          <h3 class="khan__title">The One World Schoolhouse</h3>
+          <p class="khan__author">Salman Khan</p>
+          <h2 class="khan__title">
+            The One World Schoolhouse
+          </h2>
           <p class="khan__quote">
             Sal Khan's passion and innovation is transforming learning for millions of students worldwide. The One World Schoolhouse is a must-read for all who are committed to improving education so students everywhere can gain the skills and knowledge to be successful in school, careers and life.
           </p>
-          <h4 class="khan__quote-author">George Lucas</h4>
-          <h5 class="khan__quote-author-subline">Filmmaker</h5>
+          <p class="khan__quote-author">George Lucas</p>
+          <p class="khan__quote-author-subline">
+            Filmmaker
+          </p>
           <div class="khan__book-container">
             <img src="./images/khan-book-2.png" alt="khan book" class="khan__book-pic">
             <a href="#" class="khan__buy-link">Buy book &#8594;</a>
@@ -324,7 +331,7 @@
           <img class="logo logo_place_footer" src="./images/logo_place_footer.png" alt="logo-footer">
           <p class="footer__author">&#169; 2021 Stas Mnuskin</p>
         </div>
-        <div class="footer__column footer__column_content_about">
+        <nav class="footer__column footer__column_content_about">
           <h4 class="footer__column-heading">
             About Practicum by Yandex
           </h4>
@@ -339,7 +346,7 @@
               <a href="#" class="footer__column-link">Professions</a>
             </li>
           </ul>
-        </div>
+        </nav>
         <div class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Social media</h4>
           <ul class="footer__list">
